--- a/cultivation/index.html
+++ b/cultivation/index.html
@@ -459,7 +459,12 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price">120 x 120 x 200 cm</p>
                                                             <p class="custom-btn-price"><strong>$190.50</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="payment-btn-1"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -479,7 +484,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">60 x 60 x 140 cm</p>
                                                         <p class="custom-btn-price"><strong>$100</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-2"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
 
                                                 </div>
@@ -498,7 +508,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">60 x 60 x 140 cm</p>
                                                         <p class="custom-btn-price"><strong>$150.00</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-3"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -516,7 +531,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">60 x 60 x 140 cm</p>
                                                         <p class="custom-btn-price"><strong>$99.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-4"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -543,7 +563,12 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price">200W</p>
                                                             <p class="custom-btn-price"><strong>$300</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="payment-btn-5"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
@@ -563,7 +588,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">120W</p>
                                                         <p class="custom-btn-price"><strong>$190</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-6"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
 
                                                 </div>
@@ -582,7 +612,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">150W</p>
                                                         <p class="custom-btn-price"><strong>$188.99</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-7"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -599,7 +634,12 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price">250w</p>
                                                         <p class="custom-btn-price"><strong>$320.50</strong></p>
-                                                        <p class="custom-btn-comprar"> <div id="payment-btn-8"></div> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
