--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -521,7 +521,7 @@
                                                 <div class="et_pb_blurb_container">
                                                     <h2 class="et_pb_module_header"><span>Kandypens Slim Vaporizer - White</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$34.95</strong></p>
+                                                        <p class="custom-btn-price"><strong>$44.95</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
                                                                 <span class="text">Comprar</span>
@@ -543,7 +543,7 @@
                                                 <div class="et_pb_blurb_container">
                                                     <h2 class="et_pb_module_header"><span>Yocan Hive Vaporizer - Blue</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$34.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>$54.99</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
                                                                 <span class="text">Comprar</span>
@@ -571,7 +571,7 @@
                                                         <h2 class="et_pb_module_header"><span>Little Dipper Dab Straw Vaporizer - Yellow</span></h2>
 
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$29.99</strong></p>
+                                                            <p class="custom-btn-price"><strong>$49.99</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
                                                                     <span class="text">Comprar</span>
@@ -618,7 +618,7 @@
                                                 <div class="et_pb_blurb_container">
                                                     <h2 class="et_pb_module_header"><span>Yocan Uni Box Mod Vaporizer - Matte Gold</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$34.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>$54.99</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
                                                                 <span class="text">Comprar</span>
@@ -672,7 +672,7 @@
                                                         <h2 class="et_pb_module_header"><span>G Pen Slim BUSH Snoop Dogg Hookah</span></h2>
 
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$24.95</strong></p>
+                                                            <p class="custom-btn-price"><strong>$44.95</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
                                                                     <span class="text">Comprar</span>
@@ -696,7 +696,7 @@
                                                     <h2 class="et_pb_module_header"><span>Goody Vape Battery</span></h2>
 
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$24.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>$34.99</strong> <span class="cs-sold-out">agotado</span></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
                                                                 <span class="text">Comprar</span>
