--- a/shop/accesorios/index.html
+++ b/shop/accesorios/index.html
@@ -445,13 +445,13 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Pipas</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Accesorios para fumar</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h4>
-                                                        Sherlock Holmes, Gandalf y Einstein. Si deseas unirte a los grandes de la historia que usan pipas, tenemos una variedad de pipas de vidrio con diseño único a buen precio.
+                                                        Para ayudarte a aprovechar al máximo el día no oficial de la hierba, hemos reunido varios accesorios esenciales que mejorarán todos los aspectos de tu experiencia 420, así como tu ritual cannábico diario. Celebremos esta planta en plena forma todos los días de la semana.
                                                     </h4>
                                                 </div>
                                             </div>
