--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                                                         <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg?v2');">
                                                             <div class="slider-content et_pb_row">
 
-                                                                <h2 class="custom-slider-text">Tienda #1 en accesorios 420</h2>
+                                                                <h2 class="custom-slider-text">high-design 420 smoking accessories</h2>
 
                                                                 <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                       <span class="text">Smoke Shop</span>
