--- a/index.html
+++ b/index.html
@@ -1440,7 +1440,7 @@
                                 <div class="et_pb_text_inner"><h3>Herbalist es sinónimo de comunidad y cultura.</h3>
 
                                     <p>
-                                        <span>Nuestra smoke shop se dedica a garantizar que todos puedan obtener accesorios 420 de alta calidad pero asequibles. Somos la vape shop online #1 para comprar accesorios para fumar a buen precio y vendemos las mejores marcas como Raw, Puffco, Grav Labs y Empire Glass.<br><br>
+                                        <span>Nuestra smoke shop se dedica a garantizar que todos puedan obtener accesorios 420 de alta calidad. Somos la vape shop online #1 para comprar accesorios para fumar a buen precio y vendemos las mejores marcas como Raw, Puffco, Grav Labs y Empire Glass.<br><br>
 
                                            <b>Nuestros productos están destinados únicamente al tabaco o al uso legal. Debe tener 18 años o más para navegar por este sitio web y comprar nuestros productos.</b>
                                         </span>
