--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1213,7 +1213,7 @@
 
                                             <ul>
                                                 <li>
-                                                    <b>Pipas vidrio de borosilicato soplado a mano resistentes al calor</b>&nbsp;- ¡Lo mejor de los Pipas vidrio soplado a mano es la multitud de formas y colores en los que vienen! El proceso de soplado de vidrio permite a los creadores hacer pipas de cristal con formas de animales y texturas divertidas. Glass también te permite comprobar cuándo es el momento de limpiar la pieza. Con tantos diseños geniales, seguramente te enamorarás de una de nuestras hermosas y asequibles pipas de vidrio de alta calidad</li>
+                                                    <b>Pipas vidrio de borosilicato soplado a mano resistentes al calor</b>&nbsp;- ¡Lo mejor de los Pipas vidrio soplado a mano es la multitud de formas y colores en los que vienen! El proceso de soplado de vidrio permite a los creadores hacer pipas de cristal con formas de animales y texturas divertidas. Glass también te permite comprobar cuándo es el momento de limpiar la pieza. Con tantos diseños geniales, seguramente te enamorarás de una de nuestras hermosas pipas de vidrio de alta calidad</li>
                                                 <li>
                                                     <b>Pipas cerámica</b>&nbsp;: dado que la cerámica es un mal conductor del calor, se mantendrán más frescos en sus manos mientras los usa. También vienen en algunos diseños bastante interesantes. La cerámica es uno de los materiales más caros dado que no es el más fácil de trabajar, pero estas son algunas de las pipas de estilo más hermosas y decorativas disponibles.</li>
                                                 <li>
