--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v16.2 (Yoast SEO v17.3) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>▷ Smoke Shop | pipas, bongs, accesorios para fumar | Herbalist</title>
+    <title>▷ Smoke Shop | pipas, bongs, cbd, accesorios para fumar | Herbalist</title>
     <meta name="description" content="Herbalist Smoke Shop es la tienda en línea de confianza con envío gratis y atención al cliente de primer nivel. Encuentre pipas, bongs, cbd, vaporizadores y otros accesorios para fumar." />
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
@@ -26,7 +26,7 @@
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="▷ Smoke Shop | pipas, bongs, accesorios para fumar | Herbalist" />
+    <meta property="og:title" content="▷ Smoke Shop | pipas, bongs, cbd, accesorios para fumar | Herbalist" />
     <meta property="og:description" content="Herbalist Smoke Shop es la tienda en línea de confianza con envío gratis y atención al cliente de primer nivel. Encuentre pipas, bongs, cbd, vaporizadores y otros accesorios para fumar." />
     <meta property="og:url" content="https://www.herbalist.ml/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -471,7 +471,7 @@
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Herbalist Smoke Shop: CBD, bongs, pipas, vapes y accesorios</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Lo mejor en pipas, bongs, cbd y accesorios para fumar</h1></div>
                                             </div>
                                         </div>
                                     </div>
