--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v16.2 (Yoast SEO v17.3) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>▷ Smoke Shop | pipas, bongs, cbd, accesorios para fumar | Herbalist</title>
+    <title>Smoke Shop | pipas, bongs, cbd, accesorios para fumar | Herbalist</title>
     <meta name="description" content="Herbalist Smoke Shop es la tienda en línea de confianza con envío gratis y atención al cliente de primer nivel. Encuentre pipas, bongs, cbd, vaporizadores y otros accesorios para fumar." />
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
@@ -26,7 +26,7 @@
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="▷ Smoke Shop | pipas, bongs, cbd, accesorios para fumar | Herbalist" />
+    <meta property="og:title" content="Smoke Shop | pipas, bongs, cbd, accesorios para fumar | Herbalist" />
     <meta property="og:description" content="Herbalist Smoke Shop es la tienda en línea de confianza con envío gratis y atención al cliente de primer nivel. Encuentre pipas, bongs, cbd, vaporizadores y otros accesorios para fumar." />
     <meta property="og:url" content="https://www.herbalist.ml/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
