--- a/cbd/index.html
+++ b/cbd/index.html
@@ -53,7 +53,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: El mejor aceite de CBD en Costa Rica</title>
+    <title>CBD en Costa Rica | Herbalist</title>
     <meta name="description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:locale" content="es_CR" />
