--- a/cbd/index.html
+++ b/cbd/index.html
@@ -58,7 +58,7 @@
     <link rel="canonical" href="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: El mejor aceite de CBD en Costa Rica" />
+    <meta property="og:title" content="CBD en Costa Rica | Herbalist" />
     <meta property="og:description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:site_name" content="Herbalist" />
