--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: Descubre las mejores pipas de vidrio</title>
+    <title>Pipas para fumar | Herbalist Costa Rica</title>
     <meta name="description" content="¿Esta buscando su pipa de hierba? ¡Ven a comprar la pipa de vidrio perfecta para fumar marihuana aquí en Herbalist!" />
     <link rel="canonical" href="https://www.herbalist.ml/shop/pipas/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Descubre las mejores pipas de vidrio" />
+    <meta property="og:title" content="Pipas para fumar | Herbalist Costa Rica" />
     <meta property="og:description" content="¿Esta buscando su pipa de hierba? ¡Ven a comprar la pipa de vidrio perfecta para fumar marihuana aquí en Herbalist!" />
     <meta property="og:url" content="https://www.herbalist.ml/shop/pipas/" />
     <meta property="og:site_name" content="Herbalist" />
