--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -53,12 +53,12 @@
     </script>
  
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: Encuentra los mejores Bongs</title>
+    <title>Bongs de vidrio | Herbalist Costa Rica</title>
     <meta name="description" content="Compre nuestra amplia selección de bongs y pipas de vidrio a los mejores precios y diseñados con vidrio de silicona de la más alta calidad. Envío gratis a cualquier lugar de Costa Rica" />
     <link rel="canonical" href="https://www.herbalist.ml/shop/bongs/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Encuentra los mejores Bongs" />
+    <meta property="og:title" content="Bongs de vidrio | Herbalist Costa Rica" />
     <meta property="og:description" content="Compre nuestra amplia selección de bongs y pipas de vidrio a los mejores precios y diseñados con vidrio de silicona de la más alta calidad. Envío gratis a cualquier lugar de Costa Rica" />
     <meta property="og:url" content="https://www.herbalist.ml/shop/bongs/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -443,7 +443,7 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Bongs</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Bongs de vidrio</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
