--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: Picadoras o Grinders al mejor precio</title>
+    <title>Picadoras de weed | Herbalist Costa Rica</title>
     <meta name="description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/picadoras/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Picadoras o Grinders al mejor precio" />
+    <meta property="og:title" content="Picadoras de weed | Herbalist Costa Rica" />
     <meta property="og:description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/picadoras/" />
     <meta property="og:site_name" content="Herbalist" />
@@ -439,13 +439,10 @@
 
                                 <div class="et_pb_section et_pb_section_1 et_section_regular">
 
-
-
-
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Grinders</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Picadoras</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
@@ -677,9 +674,6 @@
           <footer class="et-l et-l--footer">
             <div class="et_builder_inner_content et_pb_gutters3">
                 <div class="et_pb_section et_pb_section_1_tb_footer cus-animate-section et_section_regular" >
-
-
-
 
                     <div class="et_pb_row et_pb_row_0_tb_footer et_pb_row_fullwidth cus-animate-wrap">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
