--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: Vaporizadores Herbales</title>
+    <title>Vape Shop | Vaporizadores | Herbalist Costa Rica</title>
     <meta name="description" content="Compre los mejores vaporizadores de marihuana para cannabis y hierbas secas. Tenemos las mejores marcas y vaporizadores de la más alta tecnología, vaporizadores portátiles." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/vapes/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Vaporizadores Herbales" />
+    <meta property="og:title" content="Vape Shop | Vaporizadores | Herbalist Costa Rica" />
     <meta property="og:description" content="Compre los mejores vaporizadores de marihuana para cannabis y hierbas secas. Tenemos las mejores marcas y vaporizadores de la más alta tecnología, vaporizadores portátiles." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/vapes/" />
     <meta property="og:site_name" content="Herbalist" />
@@ -440,13 +440,10 @@
 
                                 <div class="et_pb_section et_pb_section_1 et_section_regular" >
 
-
-
-
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Vapes</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Vape Shop</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
