--- a/cultivation/index.html
+++ b/cultivation/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: Cultivo de cannabis en Costa Rica</title>
+    <title>Cultivo de cannabis | Herbalist Costa Rica</title>
     <meta name="description" content="Herbalist Smoke Shop: Asesoramiento y venta de productos para el cultivo de cannabis en Costa Rica" />
     <link rel="canonical" href="https://www.herbalist.ml/cultivation/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Cultivo de cannabis en Costa Rica" />
+    <meta property="og:title" content="Cultivo de cannabis | Herbalist Costa Rica" />
     <meta property="og:description" content="Herbalist Smoke Shop: Asesoramiento y venta de productos para el cultivo de cannabis en Costa Rica." />
     <meta property="og:url" content="https://www.herbalist.ml/cultivation/" />
     <meta property="og:site_name" content="Herbalist" />
@@ -438,7 +438,7 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Nos dedicamos al asesoramiento y venta de productos para el cultivo de cannabis en Costa Rica</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Herramientas para el Cultivo de cannabis</h1></div>
                                             </div>
                                         </div>
                                     </div>
