--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -185,7 +185,7 @@
                                         <a class="mega-menu-link" href="https://www.herbalist.ml/shop/accesorios/" tabindex="0">Accesorios</a>
                                     </li>
                                     <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                        <a class="mega-menu-link" href="https://www.herbalist.ml/cbd/" tabindex="0">CBD</a>
+                                        <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cbd/" tabindex="0">CBD</a>
                                     </li>
                                     <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
                                         <a class="mega-menu-link" href="https://www.herbalist.ml/cultivation/" tabindex="0">Cultivo</a>
@@ -312,7 +312,7 @@
                         </div>
 
                         <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
-                            <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/cbd/">CBD</a>
+                            <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/cbd/">CBD</a>
                         </div>
 
                         <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
