--- a/shop/index.html
+++ b/shop/index.html
@@ -175,7 +175,7 @@ heateor_sss_vertical_sharing{
                                                 <a class="mega-menu-link" href="https://www.herbalist.ml/shop/accesorios/" tabindex="0">Accesorios</a>
                                             </li>
                                             <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                                <a class="mega-menu-link" href="https://www.herbalist.ml/cultivation/" tabindex="0">Cultivo</a>
+                                                <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cultivo/" tabindex="0">Cultivo</a>
                                             </li>
                                             <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
                                                 <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cbd/" tabindex="0">CBD</a>
@@ -358,7 +358,7 @@ heateor_sss_vertical_sharing{
                             </div>
 
                             <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
-                                <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/cultivation/">Cultivo</a>
+                                <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/cultivo/">Cultivo</a>
                             </div>
 
                             <div class="et_pb_button_module_wrapper et_pb_button_11_tb_header_wrapper  et_pb_module ">
