--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 
                             <div class="et_pb_module et_pb_image et_pb_image_0_tb_header">
-                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist smoke shop" title="logo" class="wp-image-16" /></span></a>
+                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist smoke shop" title="herbalist logo" class="wp-image-16" /></span></a>
                             </div>
 
                         </div>
@@ -486,7 +486,7 @@
                                                     <div class="shop-content">
                                                         <h2>Pipas</h2>
                                                         <div class="shop-image">
-                                                            <a href="https://www.herbalist.ml/shop/pipas/"><img src="https://www.herbalist.ml/img/icons/pipa-icon.jpg" alt="pipas" /></a>
+                                                            <a href="https://www.herbalist.ml/shop/pipas/"><img src="https://www.herbalist.ml/img/icons/pipa-icon.jpg" alt="pipas costa rica" /></a>
                                                         </div>
 
                                                         <p>
@@ -499,7 +499,7 @@
                                                     <div class="shop-content">
                                                         <h2>Bongs</h2>
                                                         <div class="shop-image">
-                                                            <a href="https://www.herbalist.ml/shop/bongs/"><img src="https://www.herbalist.ml/img/icons/bong-icon.jpg" alt="bongs" /></a>
+                                                            <a href="https://www.herbalist.ml/shop/bongs/"><img src="https://www.herbalist.ml/img/icons/bong-icon.jpg" alt="bongs costa rica" /></a>
                                                         </div>
                                                         <p>
                                                             En nuestra tienda encontrarás tu próximo bong o pipa! Tenemos muchos tipos de pipas y bongs a la venta.
@@ -521,7 +521,7 @@
                                                         <div class="shop-content">
                                                             <h2>Grinders</h2>
                                                             <div class="shop-image">
-                                                                <a href="https://www.herbalist.ml/shop/picadoras/"><img src="https://www.herbalist.ml/img/icons/grinder-icon.jpg" alt="grinders" /></a>
+                                                                <a href="https://www.herbalist.ml/shop/picadoras/"><img src="https://www.herbalist.ml/img/icons/grinder-icon.jpg" alt="picadoras de weed" /></a>
                                                             </div>
                                                             <p>
                                                                 El grinder es una de las herramientas más importantes que puede tener cualquier stoner. Para moler esas hierbas secas y hacerlas perfectas para un humo suave, se necesita un grinder fuerte.
@@ -579,7 +579,7 @@
 
                                     <div class="et_pb_text_inner"><div class="client-reviews embarc_deals_info"><div class="deals-info row">
                                         <div class="deals-image">
-                                            <img src="https://www.herbalist.ml/img/products/pipas/herbalist-mini-pipe.jpg" alt="herbalist smoke shop pipa de vidrio" class="img-responsive"/>
+                                            <img src="https://www.herbalist.ml/img/products/pipas/herbalist-mini-pipe.jpg" alt="mini pipa de vidrio" class="img-responsive"/>
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
@@ -592,7 +592,7 @@
                                         </div>
                                     </div><div class="deals-info row">
                                         <div class="deals-image">
-                                            <img src="https://www.herbalist.ml/img/products/accesorios/fast-weight-fuzion-digital-mini-scale-7334666076239_400x.jpg?v=1628130835" alt="herbalist tana" class="img-responsive"/>
+                                            <img src="https://www.herbalist.ml/img/products/accesorios/fast-weight-fuzion-digital-mini-scale-7334666076239_400x.jpg?v=1628130835" alt="tana" class="img-responsive"/>
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
@@ -605,7 +605,7 @@
                                         </div>
                                     </div><div class="deals-info row">
                                         <div class="deals-image">
-                                            <img src="https://www.herbalist.ml/img/products/accesorios/mini-roller-ocb.jpg?v2" alt="Enroladora OCB" class="img-responsive"/>
+                                            <img src="https://www.herbalist.ml/img/products/accesorios/mini-roller-ocb.jpg?v2" alt="Enroladora" class="img-responsive"/>
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
@@ -1483,7 +1483,7 @@
 
                             <a href="https://www.herbalist.ml/">
                             <span class="et_pb_image_wrap ">
-                            <img src="https://www.herbalist.ml/img/ig-logo.jpg?v476" alt="herbalist smoke shop" title="logo" class="wp-image-16" />
+                            <img src="https://www.herbalist.ml/img/ig-logo.jpg?v476" alt="smoke shop costa rica" title="logo" class="wp-image-16" />
                             </span>
                             </a>
 
