--- a/shop/index.html
+++ b/shop/index.html
@@ -49,7 +49,7 @@ heateor_sss_vertical_sharing{
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v16.2 (Yoast SEO v17.3) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: Tienda #1 en accesorios 420</title>
+    <title>Accesorios para fumar | Herbalist Costa Rica</title>
     <meta name="description" content="Herbalist es la tienda en línea de confianza con envío gratuito, devoluciones instantáneas y atención al cliente de primer nivel. Compre bongs de agua, pipas, vaporizadores y otros accesorios para fumar" />
     <link rel="canonical" href="https://www.herbalist.ml/shop/" />
 
@@ -57,7 +57,7 @@ heateor_sss_vertical_sharing{
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Tienda #1 en accesorios 420" />
+    <meta property="og:title" content="Accesorios para fumar | Herbalist Costa Rica" />
     <meta property="og:description" content="Herbalist es la tienda en línea de confianza con envío gratuito, devoluciones instantáneas y atención al cliente de primer nivel. Compre bongs de agua, pipas, vaporizadores y otros accesorios para fumar" />
     <meta property="og:url" content="https://www.herbalist.ml/shop/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
