--- a/shop/index.html
+++ b/shop/index.html
@@ -478,7 +478,7 @@ heateor_sss_vertical_sharing{
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Smoke Shop</h1></div>
+                                                <div class="et_pb_text_inner"><h1>La mejor Smoke Shop en Costa Rica</h1></div>
                                             </div>
                                         </div>
                                     </div>
